# icub_skin

./: CMakeLists.txt  README.md  skin.thrift
include/iCub/: BodyPart.h  SkinCommand.h  SkinManager.h  SkinPart.h  TaxelPose.h
src/: BodyPart.cpp  SkinCommand.cpp  SkinManager.cpp  SkinPart.cpp  TaxelPose.cpp  test_skin_client.cpp  test_skin_server.cpp
